<resources>
    <string name="app_name">DailyReportingApp</string>
    <string name="welcomeback">Welcome Back!</string>
    <string name="signindetail">Please enter your sign in details to continue</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="forgotpassword">Forgot Password?</string>
    <string name="city">California, USA</string>
    <string name="managedata">Manage your Data</string>
    <string name="day">Wednesday \n24 Mar, 2021</string>
    <string name="day_value">Wednesday</string>
    <string name="notes">Notes</string>
    <string name="date">Date</string>
    <string name="typehere">Type here...</string>
    <string name="addnote">Add Note</string>
    <string name="voicetext">Voice To Text</string>
    <string name="addpictures">Add Pictures</string>
    <string name="createnote">Create Note</string>
    <string name="activities">Activities</string>
    <string name="dailyfolder">Daily Folder</string>
    <string name="corrections">Corrections</string>
    <string name="visits">Visits</string>
    <string name="suncontractoractivity">Sub-Contractor\nActivities</string>
    <string name="subcontractor">Sub-Contractor Activities</string>
    <string name="addactivity">Add Activity</string>
    <string name="takepicture">Take Picture</string>
    <string name="next">Next</string>
    <string name="submit">Submit</string>
    <string name="editactivity">Edit Activity</string>
    <string name="savepictures">Save Pictures</string>
    <string name="dailyreport">Daily Report</string>
    <string name="settings">Settings</string>
    <string name="language">Language</string>
    <string name="generalinfo">General Info</string>
    <string name="dailyconditions">Daily Conditions</string>
    <string name="logout">Logout</string>
    <string name="fontsize">Font Size</string>
    <string name="switchproject">Switch Project</string>
    <string name="activitynumber">Activity-1</string>
    <string name="activityname">Activity Name</string>
    <string name="projectnumber">Project Number</string>
    <string name="temperature">Temperature</string>
    <string name="fielduser">Field User</string>
    <string name="projectname">Project Name</string>
    <string name="code">Code</string>
    <string name="timeofarrival">Time Of Arrival</string>
    <string name="timeofdeparture">Time Of Departure</string>
    <string name="numberofworkers">Number Of Workers</string>
    <string name="equipmentused">Equipment Used</string>
    <string name="completedtask">Completed Task</string>
    <string name="location">Location</string>
    <string name="taskcompleted">Task Completed</string>
    <string name="weather">Weather</string>
    <string name="complaint">Comply</string>
    <string name="dummytext">Lorem ipsum dolor sit amet...</string>
    <string name="completedailyreport">Complete Daily Report</string>
    <string name="dailyactivities">Daily Activities</string>
    <string name="subcontractordailycondition">Sub-Contractor Daily Conditions</string>
    <string name="dailyvisit">Daily Visit</string>
    <string name="time">08:00 am</string>
    <string name="reasonforvisit">Reason For Visit</string>
    <string name="visitorname">Visitor Name</string>
    <string name="companyname">Company Name</string>
    <string name="title">Title</string>
    <string name="note">Note</string>
    <string name="select_image">Select Image</string>
    <string name="enteractivityname">Please enter Activity Name</string>
    <string name="entercode">Please enter code</string>
    <string name="enterlocation">Please enter location</string>
    <string name="enternote">Please enter note</string>
    <string name="dummytext1">Lorem ipsum dolor sit amet, consectetur adipiscing\nelit, sed do eiusmod tempor incididunt\nut labore et dolore magna aliqua.</string>
    <string name="visits_string">Visits</string>
    <string name="add_visit_log">Add Visit Log</string>
    <string name="visit_reason">Visit Reason</string>
    <string name="company_name">Company Name</string>
    <string name="save_string">Save</string>
    <string name="cancel_string">Cancel</string>
    <string name="edit_visit_log">Edit Visit Log</string>
    <string name="enter_visit_reason">Please Enter Visit Reason</string>
    <string name="enter_title">Enter Title</string>
    <string name="person_name">Person Name</string>
    <string name="please_add_image">Please add image</string>
    <string name="something_wrong">Something went wrong</string>
    <string name="invalid_login">Invalid Login credentials</string>
    <string name="invalid_email_address">Invalid Email Addresss</string>
    <string name="invalid_pass">Please enter password</string>
    <string name="sure_you_want_to_logout">Are you sure you want to logout?</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="project">Project</string>
    <string name="add_corrections">Add Corrections</string>
    <string name="visual_inspection">Visual Inspection</string>
    <string name="add_description">Add Description</string>
    <string name="edit_sub_contract">Edit SubContractor</string>
    <string name="internet_connection">It looks like your internet connection is off. Please turn it on</string>
    <string name="next_string">Next</string>
    <string name="arrival_time">Arrival Time</string>
    <string name="select_time">Select Time</string>
    <string name="depart_time">Departure Time</string>
    <string name="no_of_worker">No of Worker</string>
    <string name="complaint_after_correction">Complaint after correction</string>
    <string name="activity_string">Activity</string>
    <string name="listen_string">Listening...</string>
    <string name="no_data">No data</string>
    <string name="add_contract_activity">Add SubContractor Activity</string>
    <string name="_1_file">1 File</string>
    <string name="version_string">Version</string>
    <string name="staging_mode">STAGING MODE</string>
    <string name="live_mode">LIVE MODE</string>
    <string name="s_string">S</string>
    <string name="save_correction">Save Correction</string>
    <string name="save_visit">Save Visit Log</string>
    <string name="save_sub_contract">Save Sub-Contract Activity</string>
    <string name="add_to_folder">Add to Daily Folder</string>
    <string name="remember_me">Remember Me</string>
    <string name="english_string">English</string>
    <string name="french_string">French</string>
    <string name="no_data_string">No data</string>
    <string name="title_string">Title</string>
    <string name="description_string">Description</string>
    <string name="demo_date">22 Feb, 2021</string>
    <string name="edit_string">Edit</string>
    <string name="purchase">Purchase</string>
    <string name="plastering_outer_walls">Plastering Outer Walls</string>
    <string name="dhaka_bd">DHAKA, BD</string>
    <string name="_20_april_2012_20_08_pm">20 April 2012, 20:08 PM</string>
    <string name="clear_sky">Clear Sky</string>
    <string name="hammer_drill_machine">Hammer, Drill Machine</string>
    <string name="temp_error">\'Temperature\' must be less than \'50\'.</string>
    <string name="subcontractor_s_name">Subcontractor Name</string>
    <string name="add_activity_type">Add Activity Type</string>
    <string name="activity_code">Activity Code</string>
    <string name="activity_name">Activity Name</string>
    <string name="enter_activity_code">Enter Activity Code</string>
    <string name="enter_activity_name">Enter Activity Name</string>
    <string name="select_activity_type">Select activity type</string>
    <string name="select_base_activity_type">Select base activity type</string>
    <string name="upload_report">A reminder to upload your report for the day</string>
    <string name="add_daily_report">Please Add daily report</string>
    <string name="date_revert">The date has been reverted back to the current date</string>
    <string name="unpredictable">Unpredictable</string>
    <string name="city_name">City</string>
    <string name="network_error">Network Error</string>


    <string-array name="language_option">
        <item>English</item>
        <item>French</item>
    </string-array>
</resources>