<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="35dp"
        android:layout_marginRight="20dp" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbar">

        <RelativeLayout
            android:id="@+id/rlMain"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="10dp">

            <RelativeLayout
                android:id="@+id/rlEmail"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="25dp"
                android:background="@drawable/bg_date">

                <TextView
                    android:id="@+id/txtDay"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="30dp"
                    android:paddingTop="7dp"
                    android:text="@string/day_value"
                    android:textColor="@color/blue"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/dateTV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/txtDay"
                    android:layout_alignParentBottom="true"
                    android:layout_marginTop="4dp"
                    android:layout_marginBottom="10dp"
                    android:paddingStart="30dp"
                    android:text="@string/day"
                    android:textColor="@color/black"
                    android:textSize="13sp" />

                <TextView
                    android:id="@+id/txtCity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:paddingEnd="14dp"
                    android:text="@string/city"
                    android:textColor="#888282"
                    android:textSize="12sp"
                    android:textStyle="normal" />

            </RelativeLayout>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardViewMain"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/rlEmail"
                android:layout_marginTop="20dp"
                android:background="@drawable/white_rounded_corner"
                card_view:cardBackgroundColor="@android:color/transparent"
                card_view:cardCornerRadius="10dp"
                card_view:cardUseCompatPadding="true">

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="250dp"
                    android:background="@drawable/white_rounded_corner"
                    card_view:cardBackgroundColor="#fff"
                    card_view:cardCornerRadius="10dp"
                    card_view:cardElevation="3dp">

                    <EditText
                        android:id="@+id/etNote"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="20dp"
                        android:background="@android:color/transparent"
                        android:hint="@string/addnote"
                        android:textColor="@android:color/black"
                        android:textSize="13sp"
                        android:textStyle="bold" />

                    <RelativeLayout
                        android:id="@+id/voiceRL"
                        android:layout_width="130dp"
                        android:layout_height="44dp"
                        android:layout_gravity="right|bottom"
                        android:background="@drawable/bg_btn_addnotevoice">

                        <ImageView
                            android:id="@+id/imgVoice"
                            android:layout_width="26dp"
                            android:layout_height="29dp"
                            android:layout_centerVertical="true"
                            android:layout_marginStart="15dp"
                            android:layout_marginTop="10dp"
                            android:src="@drawable/voice" />

                        <TextView
                            android:id="@+id/voiceTV"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:layout_toEndOf="@+id/imgVoice"
                            android:paddingLeft="10dp"
                            android:paddingRight="10dp"
                            android:singleLine="true"
                            android:text="@string/voicetext"
                            android:textColor="@android:color/white"
                            android:textSize="10sp" />
                    </RelativeLayout>
                </androidx.cardview.widget.CardView>
            </androidx.cardview.widget.CardView>

            <RelativeLayout
                android:id="@+id/rlAddPictures"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/cardViewMain"
                android:layout_marginTop="20dp"
                android:visibility="visible">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="6dp"
                    android:paddingTop="10dp"
                    android:text="@string/addpictures"
                    android:textColor="@android:color/black"
                    android:textSize="14sp"
                    android:textStyle="bold" />

            </RelativeLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/rlAddPictures"
                android:visibility="visible" />

            <RelativeLayout
                android:id="@+id/rlCancelSave"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_below="@+id/recyclerView"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btnCancel"
                    android:layout_width="140dp"
                    android:layout_height="50dp"
                    android:layout_marginStart="0dp"
                    android:background="@drawable/bg_btn_cancel"
                    android:text="@string/cancel_string"
                    android:textAllCaps="false"
                    android:textColor="@android:color/white" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btnSave"
                    android:layout_width="140dp"
                    android:layout_height="50dp"
                    android:layout_alignParentEnd="true"
                    android:background="@drawable/bg_btn_save"
                    android:text="@string/save_string"
                    android:textAllCaps="false"
                    android:textColor="@android:color/white" />
            </RelativeLayout>
        </RelativeLayout>

    </androidx.core.widget.NestedScrollView>


</RelativeLayout>